--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Connection Pool \uc124\uc815
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=hr
+spring.datasource.password=zxcv1234
 
+server.port=8080
+
+#\ucee8\ud2b8\ub864\ub7ec\uac00 \ubc18\ud658\ud558\ub294 \ubdf0 \uc774\ub984 \uc55e\uc5d0 /WEB-INF/views/\ub97c \ubd99\uc774\uace0, \ubdf0 \uc774\ub984 \ub4a4\uc5d0 .jsp\ub8f0 \ubd99\uc5ec\uc11c \uc804\uccb4 jsp \ud398\uc774\uc9c0 \uacbd\ub85c\ub97c \uc644\uc131\ud55c\ub2e4.
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
