로그인 인터셉더 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ mybatis.mapper-locations=classpath:/mybatis/mappers/*.xml
 
 # \uc0ac\uc6a9\uc790 \uc815\uc758 \uc0c1\uc218\uac12 \uc124\uc815(\uc784\uc758)
 online.profile.image.save-directory=C:/eGovFrameDev-4.0.0-64bit/workspace/spring-online-service/src/main/webapp/resources/images/profile
+online.course.image.save-directory=C:/eGovFrameDev-4.0.0-64bit/workspace/spring-online-service/src/main/webapp/resources/images/course
 
 # \ud30c\uc77c\uc5c5\ub85c\ub4dc \uc124\uc815\ud558\uae30 - \ud30c\uc77c\uc5c5\ub85c\ub4dc \uc0ac\uc774\uc988 \uc124\uc815
 spring.servlet.multipart.max-file-size=2MB
